fix minor layout issue

--- a/src/components/animations/DappsAnimation/DappsAnimation.module.css
+++ b/src/components/animations/DappsAnimation/DappsAnimation.module.css
@@ -174,6 +174,7 @@
   padding: 6px;
   border-radius: 6px;
   position: relative;
+  align-items: center;
   justify-content: flex-end;
   margin-top: 4px;
 }
